Add mobile banking section

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,64 @@ nav ul {
 	display: none;
 }
 
+#mobile-banking {
+	background-color: #eeeeee;
+	padding: 20px;
+}
+
+#mobile-banking h1 {
+	font-size: 16px;
+	font-family: Helvetica, Arial;
+}
+
+
+.login {
+	background-color: #528224;
+	color: #ffffff;
+	width: 40%;
+	text-align: center;
+}
+
+.login +.login {    /* Means an element with class of .login that is after antoehr with class .login*/
+	float: right;
+} 
+
+
+#mobile-banking a {
+	display: inline-block;
+	padding: 10px;
+	text-decoration: none;
+	margin: 10px 0;
+}
+
+#mobile-banking .contact {
+	background-color: #fff;
+	display: block;
+	color: #333333;
+	border: 1px solid #dddddd;
+}
+
+#mobile-banking ul {
+	list-style: none;
+	padding-left: 0;
+}
 
 
 
 
 
+
+
+
+
+
+
+@media all and (min-width: 600px) {
+
+	#mobile-banking {
+		display: none;
+	} 
+}
 
 
 
