--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,57 @@ nav ul {
 	display: none;
 }
 
+#products {
+	text-align: center;
+	padding: 10px;
+}
+
+#products h1 {
+	color: #77ba22;
+}
+
+#products a {
+	text-decoration: none;
+	color: #25a5ca;
+	display: inline-block;
+	padding: 5px;
+	background-color: #eeeeee;
+	margin: 2px;
+	border: 1px solid #dddddd;
+}
+
+#products .percentage + a {
+	background-color: transparent;
+	border: none;
+	padding: 0;
+	margin: 0;
+}
+
+.percentage {
+	width: 300px;
+	height: 200px;
+	border: 1px solid #eeeeee;
+	margin: 20px 0;
+	box-shadow: 0 14px 0 -10px #dddddd;
+	text-align: left;
+}
+
+.percentage span {
+	text-transform: uppercase;
+	background-color: #dfdfdf;
+	padding: 6px;
+	display: inline-block;
+	font-weight: bold;
+}
+
+span.limited {
+	background-color: #ff9100;
+	color: #ffffff;
+}
+
+
+
+
 
 
 
